# fost-agent-ledger

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  workflow.yml
docs/: api.md  certificates.md  cli.md  concepts.md  design.md  examples.md  index.md  json_contract.md  limitations.md  operations.md  problem_codes.md  quickstart.md  release.md  theory_items.json  theory_mapping.md  transitions.md  workflows.md
examples/: basic_agent_output.py  certificate_target_demo.py  json_roundtrip_demo.py  langchain_style_adapter_demo.py  transition_check_demo.py
src/fost_agent_ledger/: __init__.py  adequacy.py  admissibility.py  builder.py  certificates.py  cli.py  enums.py  environment.py  errors.py  finality.py  formal.py  ids.py  issues.py  kernels.py  ledger.py  model.py  modes.py  obligations.py  payloads.py  problem_codes.py  provenance.py  stages.py  status.py  support.py  theory.py  transitions.py
src/fost_agent_ledger/adapters/: __init__.py  base.py  simple_agent.py
src/fost_agent_ledger/policies/: __init__.py  default.py
src/fost_agent_ledger/serialization/: __init__.py  json_codec.py  schema.py
src/fost_agent_ledger/validators/: __init__.py  adequacy.py  admissibility.py  base.py  certificate_targets.py  kernels.py  phase.py  status.py  support_closure.py  transitions.py
tests/: test_admissibility_and_transition.py  test_certificates_kernels.py  test_cli_and_examples.py  test_models_and_builder.py  test_release_packaging.py  test_support_graph.py  test_theory_registry.py  test_v02_core_hardening.py  test_v03_formal_completion.py  test_v04_executable_theory_completion.py  test_v20_strict_finality.py  test_wrappers_and_extras.py
tools/: __init__.py  audit_release.py  audit_theory_registry.py  check_package_metadata.py
