[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fost-agent-ledger"
version = "1.0.0"
description = "Finite operational ledger toolkit for AI-agent support, omissions, obligations, certificates, environment assumptions, and transitions."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "K. Takahashi" }]
keywords = [
  "ai-agents",
  "audit",
  "certificates",
  "finite-operational-structure",
  "ledger",
  "provenance",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "tomli>=2; python_version<'3.11'",
]

[project.urls]
Homepage = "https://github.com/kadubon/fost-agent-ledger"
Documentation = "https://github.com/kadubon/fost-agent-ledger#readme"
Issues = "https://github.com/kadubon/fost-agent-ledger/issues"
Source = "https://github.com/kadubon/fost-agent-ledger"
Changelog = "https://github.com/kadubon/fost-agent-ledger/blob/main/CHANGELOG.md"
Security = "https://github.com/kadubon/fost-agent-ledger/blob/main/SECURITY.md"
Paper = "https://doi.org/10.5281/zenodo.20995846"

[project.scripts]
fost-ledger = "fost_agent_ledger.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fost_agent_ledger"]

[tool.hatch.build.targets.wheel.force-include]
"src/fost_agent_ledger/theory_items.json" = "fost_agent_ledger/theory_items.json"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/tools",
  "/docs",
  "/examples",
  "/README.md",
  "/LICENSE",
  "/NOTICE",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/CODE_OF_CONDUCT.md",
  "/SECURITY.md",
  "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["UP007"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
packages = ["fost_agent_ledger"]
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "--cov=fost_agent_ledger --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
